--- a/.artifacts_history/dev/20260224_070148/frontend/Dockerfile
+++ b/.artifacts_history/dev/20260224_070148/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Builder
-FROM node:latest AS builder
+FROM node:16 as builder
 ARG GIT_SHA
 WORKDIR /app
 COPY package*.json ./
@@ -7,7 +7,7 @@ RUN npm ci --omit=dev
 COPY . .
 RUN npm run build
 # Stage 2: Runner
-FROM node:latest
+FROM node:16
 ARG GIT_SHA
 WORKDIR /app
 COPY --from=builder /app/dist ./dist
@@ -17,8 +17,5 @@ USER appuser
 ENV NODE_ENV=production
 ENV PORT=80
 EXPOSE 80
-HEALTHCHECK --interval=30s --timeout=5s --retries=3 CMD node -e "try { http.get('http://localhost:'+process.env.PORT, (r) => { if (r.statusCode === 200) process.exit(0); else process.exit(1); }); } catch (e) { process.exit(1); }"
+HEALTHCHECK --interval=30s --timeout=5s --retries=3 CMD node -e "try { http.get('http://localhost:'+process.env.PORT, (r) => { if (r.statusCode === 200) process.exit(0); else process.exit(1); }); } catch (e) { process.exit(1); }" || exit 1
 CMD ["node", "dist/index.js"]
-LABEL maintainer="Your Name"
-LABEL version="1.0"
-LABEL git_sha=$GIT_SHA
