--- a/.artifacts_history/dev/20260224_070404/k8s/backend/hpa.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/backend/hpa.yaml
@@ -1,10 +1,10 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: frontend
-  namespace: backend
+  name: backend
+  namespace: my-namespace
 spec:
-  maxReplicas: 10
+  maxReplicas: 5
   metrics:
   - resource:
       name: cpu
@@ -16,7 +16,4 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: frontend
-  selector:
-    matchLabels:
-      app: frontend
+    name: backend
