--- a/.artifacts_history/dev/20260224_070404/k8s/backend/pdb.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/backend/pdb.yaml
@@ -2,7 +2,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: backend
-  namespace: backend
+  namespace: my-namespace
 spec:
   minAvailable: 1
   selector:
