--- a/.artifacts_history/dev/20260224_070404/k8s/frontend/deployment.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/frontend/deployment.yaml
@@ -4,10 +4,10 @@ metadata:
   labels:
     app: frontend
     environment: prod
-    team: dev
+    team: my-team
     version: v1
   name: frontend
-  namespace: backend
+  namespace: my-namespace
 spec:
   replicas: 2
   selector:
@@ -17,7 +17,6 @@ spec:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
-    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -27,24 +26,17 @@ spec:
       - image: frontend:latest
         livenessProbe:
           httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 15
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
         name: frontend
         readinessProbe:
           httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 15
-        resources:
-          limits:
-            cpu: 100m
-            memory: 128Mi
-          requests:
-            cpu: 100m
-            memory: 128Mi
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -53,10 +45,10 @@ spec:
           readOnlyRootFilesystem: true
         startupProbe:
           httpGet:
-            path: /health
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 15
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
         volumeMounts:
         - mountPath: /tmp
           name: tmp
@@ -74,10 +66,3 @@ spec:
         name: tmp
       - emptyDir: {}
         name: var-run
-  topologySpreadConstraints:
-  - maxSkew: 1
-    topologyKey: topology.kubernetes.io/zone
-    whenUnsatisfiable: DoNotSchedule
-  - maxSkew: 1
-    topologyKey: kubernetes.io/hostname
-    whenUnsatisfiable: DoNotSchedule
