--- a/.artifacts_history/dev/20260224_070404/k8s/frontend/service.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/frontend/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
-  namespace: backend
+  name: frontend
+  namespace: my-namespace
 spec:
   ports:
   - name: http
-    port: 80
-    targetPort: 80
+    port: 8080
+    targetPort: 8080
   selector:
-    app: backend
+    app: frontend
   type: ClusterIP
