--- a/.artifacts_history/dev/20260224_070404/k8s/ingress.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/ingress.yaml
@@ -1,27 +1,24 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: backend
-  namespace: backend
+  name: ingress
+  namespace: my-namespace
 spec:
   rules:
-  - host: backend.example.com
+  - host: example.com
     http:
       paths:
       - backend:
           service:
             name: backend
             port:
-              number: 80
-        path: /
+              number: 8080
+        path: /backend
         pathType: Prefix
-  - host: frontend.example.com
-    http:
-      paths:
       - backend:
           service:
             name: frontend
             port:
-              number: 80
-        path: /
+              number: 8080
+        path: /frontend
         pathType: Prefix
