--- a/.artifacts_history/dev/20260224_070404/k8s/namespace.yaml
+++ b/.artifacts_history/dev/20260224_070404/k8s/namespace.yaml
@@ -5,4 +5,4 @@ metadata:
     pod-security.kubernetes.io/audit: restricted
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/warn: restricted
-  name: backend
+  name: my-namespace
