--- a/k8s/backend/service.yaml
+++ b/k8s/backend/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: backend
+  namespace: my-namespace
 spec:
   ports:
   - name: http
-    port: 80
-    targetPort: 80
+    port: 8080
+    targetPort: 8080
   selector:
     app: backend
   type: ClusterIP
