--- a/k8s/frontend/hpa.yaml
+++ b/k8s/frontend/hpa.yaml
@@ -2,9 +2,9 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: frontend
-  namespace: backend
+  namespace: my-namespace
 spec:
-  maxReplicas: 10
+  maxReplicas: 5
   metrics:
   - resource:
       name: cpu
@@ -17,6 +17,3 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: frontend
-  selector:
-    matchLabels:
-      app: frontend
