--- a/k8s/frontend/pdb.yaml
+++ b/k8s/frontend/pdb.yaml
@@ -2,7 +2,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: frontend
-  namespace: backend
+  namespace: my-namespace
 spec:
   minAvailable: 1
   selector:
