--- a/k8s/serviceaccount.yaml
+++ b/k8s/serviceaccount.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 automountServiceAccountToken: false
 kind: ServiceAccount
 metadata:
-  name: frontend
-  namespace: backend
+  name: my-serviceaccount
+  namespace: my-namespace
